add flask-migrate.py and clight changes to base.html

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Photogram">
+    <meta name="author" content="some disfunctional group">
 
-    <title>INFO3180 Lab 7</title>
+    <title>INFO3180 Project 2</title>
 
     <!-- Bootstrap -->
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
